--- a/projekt/raport/main.tex
+++ b/projekt/raport/main.tex
@@ -7,8 +7,10 @@
 \usepackage{booktabs}
 \usepackage{polski}
 \usepackage{float}
-
+\usepackage{multirow}
 \usepackage[utf8]{inputenc}
+\usepackage{gensymb}
+
 \setlength{\parskip}{6pt}
 
 \title{Chłodzenie pręta w oleju}
@@ -24,7 +26,7 @@
     \input{czesc1}
     \newpage
     
-    \input{czesc2}
+    \input{czesc2b}
     \newpage
     
     \input{czesc3}
