--- a/projekt/raport/wstep.tex
+++ b/projekt/raport/wstep.tex
@@ -1,4 +1,4 @@
-\subsection*{Wstęp teoretyczny}
+\section{Wstęp teoretyczny}
 W projekcie analizujemy proces chłodzenia rozgrzanego metalowego pręta, który zostaje zanurzony w oleju chłodzącym. Gdy pręt trafia do dużo chłodniejszego oleju, zaczyna oddawać mu ciepło. Powoduje to stopniowy spadek temperatury pręta oraz jednoczesny wzrost temperatury cieczy. W modelu zakładamy, że w krótkim czasie oddawanie ciepła do otoczenia jest pomijalne, dlatego traktujemy olej jako układ izolowany od środowiska.
 
 Dodatkowym uproszczeniem jest przyjęcie, że zarówno pręt, jak i olej mają w danej chwili jednakową temperaturę w całej swojej objętości. Dzięki temu opisywany proces sprowadza się do wymiany ciepła jedynie na powierzchni styku pręta z cieczą. Szybkość tej wymiany zależy od kilku parametrów: 
