--- a/projekt/raport/czesc2.tex
+++ b/projekt/raport/czesc2.tex
@@ -1,26 +1,67 @@
 \subsection*{Część 2.}
 
-W części drugiej przeprowadzono porównanie trzech metod wyznaczania funkcji $h(\Delta T)$: interpolacji Lagrange'a, aproksymacji metodą najmniejszych kwadratów (MNK) oraz funkcji sklejanych trzeciego stopnia. Zgodnie z wymaganiami zadania, dla interpolacji i splajnu wygenerowano równoodległe węzły w przedziale danych pomiarowych, a wartości $h$ w tych punktach wyznaczono metodą Lagrange'a.
+W części drugiej przeprowadzono porównanie trzech metod wyznaczania funkcji $h(\Delta T)$: 
+interpolacji Lagrange'a, aproksymacji metodą najmniejszych kwadratów (MNK) oraz funkcji sklejanych 
+trzeciego stopnia. Zgodnie z wymaganiami zadania, dla metod interpolacyjnych wygenerowano 
+równoodległe węzły w przedziale danych pomiarowych, a wartości funkcji w tych punktach określono 
+za pomocą interpolacji liniowej.
 
 \begin{figure}[H]
-    \centering
-    \includegraphics[height=0.33\textheight]{porownanie aproksymacji.png}
-    \caption{Porównanie różnych metod aproksymacji}
-    \label{fig:moj_rysunek}
+	\centering
+	\includegraphics[height=0.33\textheight]{porownanie aproksymacji.png}
+	\caption{Porównanie różnych metod aproksymacji}
 \end{figure}
 
-Interpolacja Lagrange'a pozwoliła odtworzyć wartości w nowych węzłach, jednak silnie ujawniła się jej główna wada, czyli efekt Rungego, który powoduje wyraźne oscylacje wielomianu pomiędzy punktami. Zjawisko to znacząco obniża stabilność metody i dyskwalifikuje ją z praktycznego zastosowania w dalszych obliczeniach.
+\begin{table}[H]
+	\centering
+	\renewcommand{\arraystretch}{1.3}
+	\caption{Błędy bezwzględne i względne}
+	
+	\begin{tabular}{|l|c|c|c|c|}
+		\hline
+		\multirow{2}{*}{\textbf{Metoda}} &
+		\multicolumn{2}{c|}{\textbf{Błąd bezwzględny}} &
+		\multicolumn{2}{c|}{\textbf{Błąd względny}} \\
+		\cline{2-5}
+		& \textbf{Średni} & \textbf{Maksymalny} & \textbf{Średni} & \textbf{Maksymalny} \\
+		\hline
+		MNK      & 1.5752 & 4.7903 & 0.95511 & 2.8514 \\
+		Lagrange & 1.1781 & 3.5873 & 0.71285 & 2.0382 \\
+		Splajn   & 1.0242 & 2.2889 & 0.63184 & 1.4306 \\
+		\hline
+	\end{tabular}
+\end{table}
 
-Funkcje sklejane trzeciego stopnia również oparto na równoodległych danych generowanych metodą Lagrange'a, przez co splajn przejął część niekorzystnych efektów związanych z oscylacjami i zaburzeniami w wygenerowanych punktach. Chociaż splajn zapewnia gładkość i ciągłość pochodnych, jego działanie na sztucznie wygenerowanych danych zmniejsza wiarygodność otrzymanej funkcji.
 
-Najbardziej stabilną metodą okazała się aproksymacja MNK. Wielomian 5.\ stopnia dobrze odwzorował trend danych pomiarowych, zapewniając gładkość przebiegu oraz odporność na szum pomiarowy. Brak oscylacji charakterystycznych dla interpolacji sprawia, że metoda MNK dostarcza wiarygodnej funkcji $h(\Delta T)$, odpowiedniej do dalszego wykorzystania w modelu chłodzenia.
-\newpage
+Interpolacja Lagrange'a pozwoliła odtworzyć przebieg funkcji w równoodległych węzłach, jednak 
+charakteryzowała się znacznymi oscylacjami, co jest typowym przejawem efektu Rungego. Zjawisko to 
+obniża dokładność oraz stabilność metody, co czyni ją nieprzydatną w analizowanym zadaniu.
+
+Splajn kubiczny, również oparty na równoodległych danych, wykazał znacznie lepsze własności 
+aproksymacyjne. Obliczone błędy średnie i maksymalne — zarówno względne, jak i bezwzględne — 
+okazały się najniższe spośród wszystkich trzech metod, co jednoznacznie wskazuje na najwyższą 
+dokładność splajnu. Uzyskany przebieg jest gładki i stabilny, a jednocześnie wiernie odtwarza 
+pomiarowy charakter funkcji.
+
+Aproksymacja MNK, mimo że nie osiągnęła najniższych błędów, cechuje się dużą stabilnością 
+numeryczną i odpornością na szum pomiarowy. Z tego względu jest metodą najbardziej praktyczną 
+do dalszego wykorzystania w modelu chłodzenia, zwłaszcza że wymaga ona jedynie wyznaczenia 
+parametrów wielomianu, a nie generowania równoodległych danych.
 
 \begin{figure}[H]
-    \centering
-    \includegraphics[height=0.33\textheight]{symulacja ukladu nieliniowego.png}
-    \caption{Przebiegi temperatur dla układu nieliniowego}
-    \label{fig:moj_rysunek}
+	\centering
+	\includegraphics[height=0.33\textheight]{przebieg temperatury cieczy dla roznych metod aproksymacji.png}
+	\caption{Przebiegi temperatury cieczy dla różnych metod aproksymacji}
 \end{figure}
 
-Wykorzystanie uzyskanej nieliniowej funkcji $h(\Delta T)$ w symulacji procesu chłodzenia pozwoliło uzyskać fizycznie poprawny przebieg temperatur. Temperatura pręta ulega szybkiemu spadkowi, podczas gdy temperatura oleju wzrasta do poziomu równowagi, po czym układ stabilizuje się. Model zachował stabilność numeryczną w całym analizowanym przedziale czasu, co potwierdza zasadność zastosowania metody MNK jako podstawy nieliniowego opisu wymiany ciepła.
+\begin{figure}[H]
+	\centering
+	\includegraphics[height=0.33\textheight]{przebieg temperatury preta dla roznych metod aproksymacji.png}
+	\caption{Przebiegi temperatury pręta dla różnych metod aproksymacji}
+\end{figure}
+
+Wykorzystanie uzyskanej funkcji $h(\Delta T)$ w nieliniowym modelu chłodzenia umożliwiło otrzymanie 
+fizycznie poprawnych przebiegów temperatur. Temperatura pręta szybko maleje, natomiast temperatura 
+oleju wzrasta do poziomu równowagi, po czym układ stabilizuje się. Model zachował stabilność 
+numeryczną w całym analizowanym przedziale czasu, co potwierdza poprawność doboru metody MNK 
+jako podstawy nieliniowego opisu wymiany ciepła.
