--- a/projekt/raport/czesc4.tex
+++ b/projekt/raport/czesc4.tex
@@ -2,7 +2,7 @@
 
 \subsection{Cel badawczy}
 
-Celem czwartej części projektu było wyznaczenie minimalnej masy oleju chłodzącego, która pozwala schłodzić pręt do temperatury $125^\circ$C w czasie $t=0{.}7$ s. W tym celu wykorzystano pełny, nieliniowy model chłodzenia wraz z aproksymowaną funkcją współczynnika wnikania ciepła $h(\Delta T)$ otrzymaną z funkcji sklejanych kubicznych. Rozwiązanie równania $T_b(m_w, 0{.}7\ \mathrm{s}) = 125^\circ\mathrm{C}$ przeprowadzono metodą Newtona--Raphsona.
+Celem czwartej części projektu było wyznaczenie minimalnej masy oleju chłodzącego, która pozwala schłodzić pręt do temperatury $125\degree$C w czasie $t=0{,}7$ s. W tym celu wykorzystano pełny, nieliniowy model chłodzenia wraz z aproksymowaną funkcją współczynnika wnikania ciepła $h(\Delta T)$ otrzymaną z funkcji sklejanych kubicznych. Rozwiązanie równania $T_b(m_w, 0{,}7\ \mathrm{s}) = 125\degree\mathrm{C}$ przeprowadzono metodą Newtona--Raphsona.
 
 \subsection{Przebieg eksperymentu}
 
@@ -15,7 +15,7 @@ Aktualizacja wartości masy przebiegała zgodnie ze wzorem:
 m_w^{(i+1)} = m_w^{(i)} - 
 \frac{T_b(m_w^{(i)}) - 125}{T_b'(m_w^{(i)})}.
 \]
-Jako punkt startowy przyjęto $m_w^{(0)} = 2{.}0$ kg, a wartość różnicową $\Delta m_w = 0{.}02$ kg. Do całkowania równań różniczkowych wykorzystano ulepszoną metodę Eulera.
+Jako punkt startowy przyjęto $m_w^{(0)} = 2{,}0$ kg, a wartość różnicową $\Delta m_w = 0{,}02$ kg. Do całkowania równań różniczkowych wykorzystano ulepszoną metodę Eulera.
 
 \subsection{Analiza wyników}
 
@@ -23,27 +23,27 @@ Jako punkt startowy przyjęto $m_w^{(0)} = 2{.}0$ kg, a wartość różnicową $
 
 W Tabeli~\ref{tab:newton} przedstawiono pełny przebieg iteracji metody Newtona--Raphsona. W pierwszych krokach obserwowano niestabilność spowodowaną dużym oddaleniem punktu startowego od właściwego rozwiązania. W kolejnych iteracjach algorytm szybko zbiegał do obszaru stabilnego i osiągnął wysoką dokładność końcową.
 
-\begin{table}[h!]
+\begin{table}[H]
 	\centering
-	\caption{Iteracje metody Newtona-Raphsona dla równania $T_b(m_w)=125^\circ$C.}
+	\caption{Iteracje metody Newtona-Raphsona dla równania $T_b(m_w)=125\degree$C.}
 	\label{tab:newton}
-	\begin{tabular}{c|c|c|c|c}
+	\begin{tabular}{|c|c|c|c|c|}
 		\hline
 		Iteracja $i$ &
 		$m_w^{(i)}$ [kg] &
-		$T_b(m_w^{(i)})$ [$^\circ$C] &
-		$T_b'(m_w^{(i)})$ [$^\circ$C/kg] &
-		$\Delta T_b = T_b - T_\mathrm{cel}$ [$^\circ$C] \\
+		$T_b(m_w^{(i)})$ [$\degree$C] &
+		$T_b'(m_w^{(i)})$ [$\degree$C/kg] &
+		$\Delta T_b = T_b - T_\mathrm{cel}$ [$\degree$C] \\
 		\hline
-		1 & 2.00000  & 35.0992  &  -4.957036  & -89.900794 \\
-		2 & 1.00000  & 45.0262  & -19.305357  & -79.973757 \\
-		3 & 0.50000  & 64.3812  & -73.289308  & -60.618750 \\
-		4 & 0.25000  & 101.2083 & -265.220581 & -23.791726 \\
-		5 & 0.16029  & 139.6936 & -580.334298 &  14.693621 \\
-		6 & 0.18561  & 125.3851 & -450.252403 &   0.385108 \\
-		7 & 0.18647  & 124.9638 & -446.649355 &  -0.036175 \\
-		8 & 0.18639  & 125.0036 & -446.988678 &   0.003566 \\
-		9 & 0.18640  & 124.9997 & -446.955240 &  -0.000350 \\
+		1 & 2,00000  & 35,0992  &  -4,957036  & -89,900794 \\
+		2 & 1,00000  & 45,0262  & -19,305357  & -79,973757 \\
+		3 & 0,50000  & 64,3812  & -73,289308  & -60,618750 \\
+		4 & 0,25000  & 101,2083 & -265,220581 & -23,791726 \\
+		5 & 0,16029  & 139,6936 & -580,334298 &  14,693621 \\
+		6 & 0,18561  & 125,3851 & -450,252403 &   0,385108 \\
+		7 & 0,18647  & 124,9638 & -446,649355 &  -0,036175 \\
+		8 & 0,18639  & 125,0036 & -446,988678 &   0,003566 \\
+		9 & 0,18640  & 124,9997 & -446,955240 &  -0,000350 \\
 		\hline
 	\end{tabular}
 \end{table}
