--- a/projekt/raport/main.tex
+++ b/projekt/raport/main.tex
@@ -12,6 +12,7 @@
 \usepackage{gensymb}
 
 \setlength{\parskip}{6pt}
+\renewcommand{\arraystretch}{1.3}
 
 \title{Chłodzenie pręta w oleju}
 \author{Kinga Kondraciuk \\ 319941}
