jeszcze jedna poprawka raportu

--- a/projekt/raport/czesc4.tex
+++ b/projekt/raport/czesc4.tex
@@ -50,7 +50,7 @@ W Tabeli~\ref{tab:newton} przedstawiono pełny przebieg iteracji metody Newtona-
 
 Na podstawie uzyskanych wyników wyznaczono wartość:
 \begin{displaymath}
-	m_w \approx 0{,}1864\ \text{kg},
+	m_w \approx 0{,}1864\ \text{kg}
 \end{displaymath}
 
 
