--- a/projekt/raport/czesc2b.tex
+++ b/projekt/raport/czesc2b.tex
@@ -34,7 +34,7 @@ Uzyskane błędy: średni błąd bezwzględny $1{,}18\,\mathrm{W/m^2}$ $(0{,}71\
 \newpage
 \subsection{Analiza funkcji sklejanych (splajn kubiczny)}
 
-Zaimplementowano funkcje sklejane trzeciego stopnia zgodnie z algorytmem z podręcznika. Metoda dzieli przedział na segmenty i w każdym używa osobnego wielomianu trzeciego stopnia. Wielomiany są połączone w węzłach w sposób zapewniający ciągłość funkcji, pierwszej i drugiej pochodnej (klasa gładkości $C^2$).
+Zaimplementowano funkcje sklejane trzeciego stopnia zgodnie z algorytmem z podręcznika. Metoda dzieli przedział na segmenty i w każdym używa osobnego wielomianu trzeciego stopnia. Wielomiany są połączone w węzłach w sposób zapewniający ciągłość funkcji.
 
 \begin{figure}[H]
 	
