--- a/projekt/raport/wstep.tex
+++ b/projekt/raport/wstep.tex
@@ -20,6 +20,6 @@ Tak opisany układ można przedstawić za pomocą dwóch równań różniczkowyc
 
 Symulator tworzony w ramach projektu rozwiązuje te równania numerycznie, krok po kroku.
 
-W kolejnej części projkeut współczynnik $h$ nie jest już wartością stałą, lecz zależy od różnicy temperatur między prętem a olejem. Oznacza to, że intensywność przekazywania ciepła zmienia się w trakcie chłodzenia. Ponieważ współczynnik ten jest znany tylko w postaci danych pomiarowych, konieczne jest jego przybliżenie metodami interpolacji lub aproksymacji, tak aby można było wykorzystać go w symulacjach.
+W kolejnej części projektu współczynnik $h$ nie jest już wartością stałą, lecz zależy od różnicy temperatur między prętem a olejem. Oznacza to, że intensywność przekazywania ciepła zmienia się w trakcie chłodzenia. Ponieważ współczynnik ten jest znany tylko w postaci danych pomiarowych, konieczne jest jego przybliżenie metodami interpolacji lub aproksymacji, tak aby można było wykorzystać go w symulacjach.
 
-Model ma praktyczne znaczenie technologiczne, ponieważ pozwala ocenić, jak szybko pręt może zostać schłodzony i jak dużo oleju jest do tego potrzebne. Dzięki temu można później projektować odpowiednią wielkość zbiorników i analizować wymagania procesu produkcyjnego.
+Model ma praktyczne zastosowanie technologiczne, ponieważ pozwala ocenić, jak szybko pręt może zostać schłodzony i jak dużo oleju jest do tego potrzebne. Dzięki temu można później projektować odpowiednią wielkość zbiorników i analizować wymagania procesu produkcyjnego.
