--- a/projekt/raport/czesc2b.tex
+++ b/projekt/raport/czesc2b.tex
@@ -8,9 +8,8 @@ Zaimplementowano aproksymację wielomianową stopnia 5 metodą najmniejszych kwa
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[height=0.33\textheight]{cz2/mnk.png}
+	\includegraphics[height=0.33\textheight]{Aproksymacja MNK.png}
 	\caption{Aproksymacja MNK}
-
 \end{figure}
 
 Pomarańczowa krzywa na wykresie jest gładka i przebiega w pobliżu wszystkich punktów pomiarowych, nie przechodząc przez nie dokładnie. Charakterystyka ma kształt litery U z minimum w okolicach $\Delta T = 0^\circ$C, co odpowiada fizycznej naturze zjawiska. Uzyskano następujące błędy: średni błąd bezwzględny 1.58 W/m² (0.96\%), maksymalny błąd bezwzględny 4.79 W/m² (2.85\%). Metoda wykazuje wysoką stabilność numeryczną – brak oscylacji i gwałtownych zmian. Dodatkowo aproksymacja automatycznie wygładza ewentualny szum pomiarowy w danych wejściowych. Jest to istotna zaleta, ponieważ dane eksperymentalne zawsze zawierają niepewności pomiarowe.
@@ -20,37 +19,39 @@ Pomarańczowa krzywa na wykresie jest gładka i przebiega w pobliżu wszystkich 
 Zaimplementowano interpolację wielomianową Lagrange'a, która konstruuje wielomian przechodzący dokładnie przez wszystkie punkty pomiarowe.
 
 \begin{figure}[H]
-	
 	\centering
-	\includegraphics[height=0.33\textheight]{cz2/lag.png}
+	\includegraphics[height=0.33\textheight]{Interpolacja Lagrangea.png}
 	\caption{Interpolacja Lagrange'a}
-
 \end{figure}
 
-Czerwona krzywa przechodzi przez wszystkie punkty pomiarowe, jednak między węzłami występują silne oscylacje. Szczególnie widoczne są one na brzegach przedziału: w zakresie $\Delta T \in [-1500, -1000]^\circ$C krzywa spada do $\sim 145$ W/m², by następnie wzrosnąć do $\sim 180$ W/m², natomiast w zakresie $\Delta T \in [1500, 2000]^\circ$C wartość $h$ osiąga niefizyczne $\sim 210$ W/m². To tzw. efekt Rungego – charakterystyczne oscylacje wielomianów wysokiego stopnia przy nierównoodległych węzłach.
+Czerwona krzywa przechodzi przez wszystkie punkty pomiarowe, jednak między węzłami występują silne oscylacje. Szczególnie widoczne są one na brzegach przedziału: w zakresie $\Delta T \in [-1500, -1000]^\circ$C krzywa spada do $\sim 145$ W/m², by następnie wzrosnąć do $\sim 180$ W/m², natomiast w zakresie $\Delta T \in [1500, 2000]^\circ$C wartość $h$ osiąga niefizyczne $\sim 210$ W/m². To tzw. efekt Rungego, czyli charakterystyczne oscylacje wielomianów wysokiego stopnia przy nierównoodległych węzłach.
 
-Uzyskane błędy: średni błąd bezwzględny $1{,}18\,\mathrm{W/m^2}$ $(0{,}71\%),$ maksymalny $3{,}59\,\mathrm{W/m^2}.$ Liczby te są jednak mylące – dotyczą tylko punktów pomiarowych. Między węzłami błędy są znacznie większe, a oscylacje prowadzą do niefizycznych wartości $h$. Takie gwałtowne zmiany współczynnika powodują sztywność układu równań różniczkowych, co wymaga bardzo małego kroku całkowania i zwiększa koszt obliczeniowy. Metoda została zdyskwalifikowana ze względu na brak stabilności numerycznej.
+Średni błąd bezwzględny $1{,}18\,\mathrm{W/m^2}$ $(0{,}71\%),$ maksymalny $3{,}59\,\mathrm{W/m^2}.$ Między węzłami błędy są znacznie większe, a oscylacje prowadzą do niefizycznych wartości $h$. Takie gwałtowne zmiany współczynnika powodują sztywność układu równań różniczkowych, co wymaga bardzo małego kroku całkowania i zwiększa koszt obliczeniowy. Metoda została zdyskwalifikowana ze względu na brak stabilności numerycznej.
 
 \newpage
 \subsection{Analiza funkcji sklejanych (splajn kubiczny)}
 
-Zaimplementowano funkcje sklejane trzeciego stopnia zgodnie z algorytmem z podręcznika. Metoda dzieli przedział na segmenty i w każdym używa osobnego wielomianu trzeciego stopnia. Wielomiany są połączone w węzłach w sposób zapewniający ciągłość funkcji.
+Zaimplementowano funkcje sklejane trzeciego stopnia zgodnie z algorytmem z podręcznika, czyli wymagającym węzłów równoodległych. Metoda dzieli przedział na segmenty i w każdym używa osobnego wielomianu trzeciego stopnia. Wielomiany są połączone w węzłach w sposób zapewniający ciągłość funkcji.
 
 \begin{figure}[H]
-	
 	\centering
-	\includegraphics[height=0.33\textheight]{cz2/splajn.png}
+	\includegraphics[height=0.33\textheight]{Splajn kubiczny.png}
 	\caption{Splajn kubiczny}
-
 \end{figure}
 
 Fioletowa krzywa jest gładka i przebiega przez punkty pomiarowe bez oscylacji. W porównaniu do MNK, splajn dokładniej dopasowuje się do punktów, szczególnie w zakresach gdzie $h$ zmienia się szybciej. Uzyskano najniższe błędy spośród wszystkich metod: średni błąd bezwzględny 1.02 W/m² (0.63\%), maksymalny błąd 2.29 W/m² (1.43\%). Stanowi to poprawę o około 35\% względem MNK przy zachowaniu pełnej stabilności numerycznej.
 
+\subsection{Porównanie wszystkich metod}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[height=0.33\textheight]{Porównanie metod.png}
+	\caption{Porównanie wszystkich trzech metod aproksymacji/interpolacji}
+\end{figure}
 
 \begin{table}[H]
 	\centering
 	\caption{Błędy bezwzględne i względne}
-	
 	\begin{tabular}{|l|c|c|c|c|}
 		\hline
 		\multirow{2}{*}{\textbf{Metoda}} &
@@ -66,4 +67,20 @@ Fioletowa krzywa jest gładka i przebiega przez punkty pomiarowe bez oscylacji. 
 	\end{tabular}
 \end{table}
 
-Algorytm z podręcznika wymaga równoodległych węzłów, co wymagało wstępnego przetworzenia danych. Wygenerowano 12 równoodległych punktów w przedziale $[-1500, 2000]^\circ$C, a wartości $h$ obliczono za pomocą interpolacji liniowej z oryginalnych danych nierównoodległych. Przekształcenie to wprowadza dodatkowy błąd i jest mało profesjonalne – w praktyce inżynierskiej stosuje się zaawansowane algorytmy splajnów dla węzłów nierównoodległych (np. spline z opcją \texttt{pchip} w MATLAB).
+\subsection{Analiza przebiegów temperatur}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[height=0.33\textheight]{Temperatura preta.png}
+	\caption{Temperatura pręta $T_b(t)$ - porównanie trzech metod aproksymacji}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[height=0.33\textheight]{Temperatura cieczy chlodzacej.png}
+	\caption{Temperatura cieczy chłodzącej $T_w(t)$ - porównanie trzech metod aproksymacji}
+\end{figure}
+
+Mimo że splajn kubiczny wykazał najniższe błędy aproksymacji we wszystkich kategoriach (średni błąd 1,02 W/m² wobec 1,58 W/m² dla MNK), jako metodę referencyjną należy wybrać aproksymację wielomianową MNK stopnia 5. Decydującym czynnikiem jest problem implementacyjny: algorytm funkcji sklejanych z podręcznika wymaga węzłów równoodległych, podczas gdy dane pomiarowe są nierównoodległe. Konieczne było sztuczne wygenerowanie 12 równoodległych punktów i obliczenie wartości h za pomocą interpolacji liniowej z oryginalnych danych. To rozwiązanie jest nieprofesjonalne i wprowadza dodatkowy błąd wynikający z przetworzenia danych oryginalnych oraz utraty informacji zawartej w naturalnym rozmieszczeniu węzłów pomiarowych.
+
+Metoda MNK działa bezpośrednio na danych oryginalnych bez sztucznych przeróbek i naturalnie wygładza szum pomiarowy, co jest korzystne dla danych eksperymentalnych. Zapewnia wysoką stabilność numeryczną bez oscylacji oraz gładką charakterystykę odpowiadającą fizyce zjawiska. W praktyce inżynierskiej stosuje się wprawdzie zaawansowane algorytmy splajnów dla węzłów nierównoodległych (np. spline z opcją pchip w MATLAB), ale ich samodzielna implementacja wykracza poza zakres projektu. W kontekście dostępnych narzędzi i wymagania samodzielnej implementacji, metoda MNK stopnia 5 stanowi optymalne rozwiązanie.
